# Projekt-Paradygmaty-Programowania

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/aggregate/: reducers.py  report.py
src/core/: functional.py  result.py
src/parsing/: parser.py  reader.py  validators.py
src/transform/: filters.py  mappers.py  pipelines.py
tests/: conftest.py  test_aggregate.py  test_parsing.py  test_result.py  test_transform.py
